[fix] JDK8兼容